--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,6 @@ h1 {
 }
 
 .accordion-btn:focus {
-	/* font-weight: bold; */
 	outline: none;
 }
 
@@ -117,23 +116,16 @@ h1 {
 	rotate: 180deg;
 }
 
-/* [aria-expanded=true] .arrow-icon {
-	transform: rotate(180deg);
-  } */
-
 .accordion-info {
-	display: none;
+	height: 0px;
 	margin-right: 2em;
-	/* transition: all 1s; */
+	overflow: hidden;
+	transition: height 0.3s;
 }
 
-/* .active {
-	display: block;	
-} */
-
-.active .accordion-info {
-	display: block;	
-} 
+.accordion-info.active {
+	height: max-content;
+}
 
 .accordion-text {
 	font-size: 0.7rem;
